--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -145,7 +145,7 @@ const boardMembers: TeamMember[] = [
     <figure slot="media" class="about-hero__media">
       <span class="about-hero__blob" aria-hidden="true"></span>
       <img
-        src="/images/about_flag.png"
+        src="/images/accent/about_flag.png"
         alt="League students celebrating with The League flag"
         loading="lazy"
       />
@@ -315,7 +315,7 @@ const boardMembers: TeamMember[] = [
   /* Mission Section with Background */
   .mission-section {
     min-height: 100vh;
-    background-image: url("/images/Our_MissionBG.png");
+    background-image: url("/images/action/Our_MissionBG.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
