--- a/src/layouts/ClassLayout.astro
+++ b/src/layouts/ClassLayout.astro
@@ -25,8 +25,12 @@ const { title, description } = Astro.props as Props;
 
 <style>
   .class-layout {
-    display: grid;
-    gap: var(--space-xxl, 4rem);
+    display: flex;
+    flex-direction: column;
+  }
+
+  .class-layout__hero:not(:empty) {
+    margin-bottom: var(--space-xxl, 4rem);
   }
 
   .class-layout__hero:empty,
@@ -37,5 +41,9 @@ const { title, description } = Astro.props as Props;
   .class-layout__content {
     display: grid;
     gap: var(--space-xl, 3rem);
+  }
+
+  .class-layout__footer:not(:empty) {
+    margin-top: 0;
   }
 </style>
