--- a/src/components/CardFooter.astro
+++ b/src/components/CardFooter.astro
@@ -64,6 +64,9 @@ const hasDefault = Astro.slots.has("default");
 
   .card__footer .card__content {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-sm);
   }
 
   .card__footer .button-group {
@@ -74,6 +77,7 @@ const hasDefault = Astro.slots.has("default");
   .card__footer .learn-more-button {
     width: 100%;
     align-self: center;
+    margin-top: auto;
   }
 
   .card__footer .learn-more-button :global(*) {
