--- a/src/components/CardFooter.astro
+++ b/src/components/CardFooter.astro
@@ -60,6 +60,8 @@ const hasDefault = Astro.slots.has("default");
     gap: var(--space-sm);
     align-items: center;
     padding: 0 var(--space-xl) var(--space-xl);
+    margin-top: auto;
+    width: 100%;
   }
 
   .card__footer .card__content {
@@ -67,6 +69,7 @@ const hasDefault = Astro.slots.has("default");
     display: flex;
     flex-direction: column;
     gap: var(--space-sm);
+    flex: 1 1 auto;
   }
 
   .card__footer .button-group {
